[project]
name = "openai-assistants"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "duckduckgo-search>=8.0.1",
    "langchain>=0.3.25",
    "langchain-community>=0.3.23",
    "langchain-openai>=0.3.16",
    "openai>=1.78.0",
    "pydantic>=2.11.4",
    "requests>=2.32.3",
    "streamlit>=1.45.0",
    "wikipedia>=1.4.0",
    "yfinance>=0.2.59",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "notebook>=7.4.2",
]
